// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="boost-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Boost
        </div>
        <div
          className="sub-title"
        >
          Boost your post
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body flex flex-col"
    >
      <div
        className="self-center mb-4"
      >
        <a
          href="/faq#how-boosting-work"
        >
          Learn more about boosting
        </a>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 flex items-center"
        >
          <label>
            Balance
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <input
            className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red balance-input"
            readOnly={true}
            type="text"
            value="500.000 POINTS"
          />
          
        </div>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 sm:mt-3"
        >
          <label>
            Post
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <div
            className="suggestion relative"
          >
            <input
              className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
              disabled={false}
              onChange={[Function]}
              placeholder="username/permlink"
              type="text"
              value=""
            />
            <div />
          </div>
          
          <small
            className="text-gray-600"
          >
            Autocomplete input
          </small>
        </div>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 sm:mt-3"
        >
          <label>
            Amount
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <div
            className="slider-area"
          >
            <div
              className="slider-price"
            >
              1.000 $
              <small>
                150
                 POINTS
              </small>
            </div>
            <input
              className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
              max={550}
              min={150}
              onChange={[Function]}
              step={50}
              type="range"
              value={150}
            />
            <small
              className="text-gray-600"
            >
              Drag the slider to adjust the amount.
            </small>
          </div>
        </div>
      </div>
      <div
        className="flex mb-4"
      >
        <div
          className="w-full sm:w-2/12"
        />
        <div
          className="w-full sm:w-10/12"
        >
          <button
            className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
              }
            }
            type="button"
          >
            <div>
              Next
            </div>
          </button>
          <div
            className="text-sm text-warning-default italic mt-1"
          >
            Actual value of vote you receive may vary
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Insufficient Funds 1`] = `
<div
  className="boost-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Boost
        </div>
        <div
          className="sub-title"
        >
          Boost your post
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body flex flex-col"
    >
      <div
        className="self-center mb-4"
      >
        <a
          href="/faq#how-boosting-work"
        >
          Learn more about boosting
        </a>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 flex items-center"
        >
          <label>
            Balance
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <input
            className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red balance-input is-invalid"
            readOnly={true}
            type="text"
            value="10.000 POINTS"
          />
          <small
            className="text-red"
          >
            Insufficient funds
          </small>
        </div>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 sm:mt-3"
        >
          <label>
            Post
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <div
            className="suggestion relative"
          >
            <input
              className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
              disabled={false}
              onChange={[Function]}
              placeholder="username/permlink"
              type="text"
              value=""
            />
            <div />
          </div>
          
          <small
            className="text-gray-600"
          >
            Autocomplete input
          </small>
        </div>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 sm:mt-3"
        >
          <label>
            Amount
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <div
            className="slider-area"
          >
            <div
              className="slider-price"
            >
              1.000 $
              <small>
                150
                 POINTS
              </small>
            </div>
            <input
              className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
              max={550}
              min={150}
              onChange={[Function]}
              step={50}
              type="range"
              value={150}
            />
            <small
              className="text-gray-600"
            >
              Drag the slider to adjust the amount.
            </small>
          </div>
        </div>
      </div>
      <div
        className="flex mb-4"
      >
        <div
          className="w-full sm:w-2/12"
        />
        <div
          className="w-full sm:w-10/12"
        >
          <button
            className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
              }
            }
            type="button"
          >
            <div>
              Next
            </div>
          </button>
          <div
            className="text-sm text-warning-default italic mt-1"
          >
            Actual value of vote you receive may vary
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) With entry 1`] = `
<div
  className="boost-dialog-content"
>
  <div
    className="transaction-form "
  >
    <div
      className="transaction-form-header"
    >
      <div
        className="step-no"
      >
        1
      </div>
      <div
        className="box-titles"
      >
        <div
          className="main-title"
        >
          Boost
        </div>
        <div
          className="sub-title"
        >
          Boost your post
        </div>
      </div>
    </div>
    <div
      className="transaction-form-body flex flex-col"
    >
      <div
        className="self-center mb-4"
      >
        <a
          href="/faq#how-boosting-work"
        >
          Learn more about boosting
        </a>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 flex items-center"
        >
          <label>
            Balance
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <input
            className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red balance-input"
            readOnly={true}
            type="text"
            value="500.000 POINTS"
          />
          
        </div>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 sm:mt-3"
        >
          <label>
            Post
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <div
            className="suggestion relative"
          >
            <input
              className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
              disabled={false}
              onChange={[Function]}
              placeholder="username/permlink"
              type="text"
              value=""
            />
            <div />
          </div>
          
          <small
            className="text-gray-600"
          >
            Autocomplete input
          </small>
        </div>
      </div>
      <div
        className="grid grid-cols-12 mb-4"
      >
        <div
          className="col-span-12 sm:col-span-2 sm:mt-3"
        >
          <label>
            Amount
          </label>
        </div>
        <div
          className="col-span-12 sm:col-span-10"
        >
          <div
            className="slider-area"
          >
            <div
              className="slider-price"
            >
              1.000 $
              <small>
                150
                 POINTS
              </small>
            </div>
            <input
              className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
              max={550}
              min={150}
              onChange={[Function]}
              step={50}
              type="range"
              value={150}
            />
            <small
              className="text-gray-600"
            >
              Drag the slider to adjust the amount.
            </small>
          </div>
        </div>
      </div>
      <div
        className="flex mb-4"
      >
        <div
          className="w-full sm:w-2/12"
        />
        <div
          className="w-full sm:w-10/12"
        >
          <button
            className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
              }
            }
            type="button"
          >
            <div>
              Next
            </div>
          </button>
          <div
            className="text-sm text-warning-default italic mt-1"
          >
            Actual value of vote you receive may vary
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
